--- a/CalorieClac/Fityfeed/templates/login.html
+++ b/CalorieClac/Fityfeed/templates/login.html
@@ -3,22 +3,34 @@
 <html lang="en">
 <head>
     <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
     <style>
 
     </style>
 </head>
-<body>
-    <h3>LOGIN</h3>
+<body class="container h-100 mt-5">
+    <h3>Iniciar sesión</h3>
 
     <form method="POST" action="">
         {% csrf_token %}
-        <input type="text" name="user" placeholder="Usuario..." >
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Usuario</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username" placeholder="Usuario..." >
+        </div>
+        
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+            <input class="form-control" id="exampleInputPassword1" type="password" name="password" placeholder="********">
+        </div>
+        
 
-        <input type="password" name="password" placeholder="********">
-
-        <input type="submit" value="Iniciar sesión"/>
+        <input type="submit" class="btn btn-primary mb-3" value="Iniciar sesión"/>
+        <div id="emailHelp" class="form-text">¿Todavia no tenes una cuenta? <a href='{% url "register" %}'>Registrate</a></div>
+        
     </form>
+
     
-    ¿Todavia no tenes una cuenta? <a href='{% url "register" %}'>Registrate</a>
+    
+    
 </body>
 </html>
