--- a/CalorieClac/Fityfeed/templates/main.html
+++ b/CalorieClac/Fityfeed/templates/main.html
@@ -1,17 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NicoCalories</title>
-    <!-- Aca va Bootstrap -->
-    <!-- Aca el css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
+    
 </head>
-<body>
-    <!-- Navbar -->
-    <h1>Home</h1>
-    {% block content %}
-
-    {% endblock %}
+<body class="body">
+    {% include 'navbar.html' %}
+    <br>
+    <br>
+    <div class="container">
+        {% block content %}
+            Alo, esto se ve si sos admin
+        {% endblock %}
+    </div>
 </body>
 </html>
