--- a/CalorieClac/Fityfeed/templates/login.html
+++ b/CalorieClac/Fityfeed/templates/login.html
@@ -24,7 +24,7 @@
         </div>
         
 
-        <input type="submit" class="btn btn-primary mb-3" value="Iniciar sesión"/>
+        <input type="submit" class="btn btn-primary mb-3 btn-success" value="Iniciar sesión"/>
         <div id="emailHelp" class="form-text">¿Todavia no tenes una cuenta? <a href='{% url "register" %}'>Registrate</a></div>
         
     </form>
