--- a/CalorieClac/Fityfeed/templates/navbar.html
+++ b/CalorieClac/Fityfeed/templates/navbar.html
@@ -22,16 +22,16 @@
         {% if request.user.is_staff %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href='{% url "food_item" %}'>Fooditem<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href='{% url "food_item" %}'>Alimentos<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href='{% url "createFoodItem" %}'>Add more items</a>
+                <a class="nav-link" href='{% url "createFoodItem" %}'>Agregar alimento</a>
                 </li>
             </ul>
         {% endif %}
 
-        <span class="hello-msg">Hello, {{request.user}}</span>
-        <span ><a  class="hello-msg" href="{% url 'logout' %}">Logout</a></span>
+        <span class="hello-msg">Hola, {{request.user}}</span>
+        <span ><a  class="hello-msg" href="{% url 'logout' %}">Cerrar sesión</a></span>
         
         
     </div>
