--- a/CalorieClac/Fityfeed/templates/user.html
+++ b/CalorieClac/Fityfeed/templates/user.html
@@ -45,6 +45,7 @@
     <div class="col">
         <div class="card card-body">
             <form>
+                <label>Nombre:</label>
                 {{my_filter.form}}
                 <button class="btn btn-primary" type="submit">Buscar</button>
             </form>
